--- a/index.html
+++ b/index.html
@@ -4,28 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="assets/logo.png">
+    <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
     <title>Vincent P.</title>
 </head>
 
 
 <header>
-    <h1 id="title">Vincent Poirot</h1>
-    <div class="border-header">
-        <button class="button-header" onclick="loadPartial('partials/home.html')"><img src="assets/home.png" alt="home-logo" height="100px" width="100px"></button>
-        <button class="button-header" onclick="loadPartial('partials/project-one.html')"><img src="assets/folder.png" alt="folder-logo" height="100px" width="100px">Projet #1</button>
-        <button class="button-header" onclick="loadPartial('partials/project-two.html')"><img src="assets/folder.png" alt="folder-logo" height="100px" width="100px">Projet #2</button>
-        <button class="button-header" onclick="loadPartial('partials/project-three.html')"><img src="assets/folder.png" alt="folder-logo" height="100px" width="100px">Projet #3</button>
-        <button class="button-header" onclick="loadPartial('partials/project-four.html')"><img src="assets/folder.png" alt="folder-logo" height="100px" width="100px">Projet #4</button>
-        </div>
+    <div class="sidebar">
+        <button class="sidebar-button" onclick="showOncePage('home')"><img src="assets/home.png" alt="folder-logo" height="70px" width="70px"></button>
+        <button class="sidebar-button" onclick="showOncePage('project1')"><img src="assets/folder.png" alt="folder-logo" height="100px" width="100px">Projet 1</button>
+        <button class="sidebar-button" onclick="showOncePage('project2')"><img src="assets/folder.png" alt="folder-logo" height="100px" width="100px">Projet 2</button>
     </div>
 </header>
 
 
 <body>
-    <div id="main-content">
-        <p>If you see this message, its a bug !</p>
+    <div class="body-content">
+        <h1 id="title">/vpoirot portfolio_</h1>
+
+
+        <div class="main-content" id="home">
+            <p>Home page</p>
+        </div>
+
+        <div class="main-content" id="project1">
+            <p>Project 1</p>
+        </div>
+        
+        <div class="main-content" id="project2">
+            <p>Project 2</p>
+        </div>
     </div>
+
+
 </body>
 
 </html>
