--- a/index.html
+++ b/index.html
@@ -13,19 +13,33 @@
 <header>
     <div class="sidebar">
         <button class="sidebar-button" onclick="showOncePage('home')"><img src="assets/home.png" alt="folder-logo" height="70px" width="70px"></button>
-        <button class="sidebar-button" onclick="showOncePage('project1')"><img src="assets/folder.png" alt="folder-logo" height="100px" width="100px">Projet 1</button>
-        <button class="sidebar-button" onclick="showOncePage('project2')"><img src="assets/folder.png" alt="folder-logo" height="100px" width="100px">Projet 2</button>
+        <button class="sidebar-button" onclick="showOncePage('project1')"><img src="assets/folder.png" alt="folder-logo" height="100px" width="100px">Cursus 42</button>
+        <button class="sidebar-button" onclick="showOncePage('project2')"><img src="assets/folder.png" alt="folder-logo" height="100px" width="100px">En cours</button>
     </div>
 </header>
 
 
 <body>
     <div class="body-content">
-        <h1 id="title">/vpoirot portfolio_</h1>
+        <h1 id="title">/vpoirot portfolio<span class="cursor">_</span></h1>
 
 
         <div class="main-content" id="home">
-            <p>Home page</p>
+            <h1>Présentation</h1>
+            <ul>
+                <li><h2>Quel développeur je suis ?</h2>
+                    <p></p>
+                </li>
+
+                <li><h2>Mes expériences professionneles</h2>
+                </li>
+                
+                <li><h2>Ma scolarité</h2>
+                </li>
+                
+                <li><h2>Mes hobbies</h2>
+                </li>
+            </ul>
         </div>
 
         <div class="main-content" id="project1">
