--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
 
 <body>
     <div class="body-content">
-        <h1 id="title">/vpoirot portfolio<span class="cursor">_</span></h1>
+        <h1 id="title">C:\vpoirot\portfolio> <span class="cursor">_</span></h1>
 
 
         <div class="main-content" id="home">
             <h1>Présentation</h1>
+            
             <ul>
                 <li><h2>Quel développeur je suis ?</h2>
                     <p></p>
