--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
             <p>Des philosophes sont réunis autour d'une table. Devant chacun, il y a une assiette et une fourchette à côté.</p>
             <p>Un philosophe demande deux fourchettes pour le repas : celle à gauche et celle à droite.<br>
             Si un philosophe ne mange pas dans un délai imparti, il décède.<br>
-            Entre chaque repas, les philosophes dorment et lorsqu'ils ne font ni l'un ni l'autre, ils pensent.</p>
+            Un philosophe doit obligatoirement prendre la fourchette à sa gauche en premier<br>
+            et ne peux pas prendre celle de droite sans la gauche.</p>
             <img src="assets/philo.png" alt="philo-picture" id="philo-img" height="200px" width="200px">
             <p>Le but du programme est de reproduire cette situation dans un code en langage C.<br>
             En argument pour lancer le programme, celui-ci demande 4 valeurs :
@@ -86,12 +87,13 @@
                 ~> Temps pour manger.<br>
                 ~> Temps pour dormir.<br>
             </ul></p>
-            <p>Le but du projet était d'utiliser les threads pour pouvoir lancer un processus différent par philosophe.<br>
+            <p>Le but du projet était d'utiliser les threads pour pouvoir lancer un processus par philosophe.<br>
             Quand un processus(un philosophe), arrive dans la fonction pour "manger",<br>
-            il retire 2 à une variable qui représente les fourchettes et si celle-ci est inférieure à 2 alors il attend (il pense).<br>
+            il réserve la fourchette à sa gauche et à sa droite ce qui fait que le prochain processus ne peux prendre la fourchette à sa gauche.<br>
+            Le philosophe qui ne peux pas prendre une fourchette attend (il pense).<br>
+            Pour bloquer une fourchette, on met en place un mutex qui vas empêcher le prochain precessus de la prendre.<br>
+            Les fourchettes sont des variables de type 'pthread_mutex_t', qui grâce à une fonction, peuvent être bloquées et empêchent les autres processus d'y accéder.<br>
             Bien sûr, pendant ce temps-là, le délai avant qu'il décède avance.</p>
-            <p>Point important : lorsque les processus accèdent à une variable, ils placent un mutex.<br>
-                C'est un système pour empêcher que les autres processus accèdent à cette variable en même temps.</p>
             <p>Pour vérifier si un philosophe doit décéder, il faut calculer le temps depuis son dernier repas<br>
             et le comparer avec le délai fourni en argument.</p>
             <p>Pour conclure, ce projet m'a permis d'approfondir mes connaissances en termes de programmations.<br>
