--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
         <button class="sidebar-button" onclick="showOncePage('project1')"><img src="assets/folder.png" alt="folder-logo" height="100px" width="100px">Cursus 42</button>
         <button class="sidebar-button" onclick="showOncePage('project2')"><img src="assets/folder.png" alt="folder-logo" height="100px" width="100px">En cours</button>
     </div>
+    <!-- <input type="checkbox" id="sidebar-toggle" hidden>
+    <label for="sidebar-toggle" class="mobile-toggle">&#9776;</label> -->
+    <button class="mobile-toggle" onclick="document.querySelector('.sidebar').classList.toggle('open')">
+        &#9776;
+    </button>
 </header>
 
 
