--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
                 <li><h2>Mes expériences professionnelles</h2>
                     <p>
-                        En dehors de stage scolaire je n'ai aucune expérience professionnelle dans le domaine de la programmation à partager pour le moment.
+                        En dehors de l'école 42 je n'ai aucune expérience professionnelle dans le domaine de la programmation à partager pour le moment.
                     </p>
                 </li>
                 
