--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
             <h2>ft_irc</h2>
                 🙋‍♂️<em>Un serveur IRC (Inter Relay Chat) est un service en ligne qui permet à des utilisateurs<br>
                     de discuter en temps réel via des "salons" ou "canaux" de discussion.</em>
-                <p>L'objectif était de créer un erveur IRC en C++ en duo. <br>
+                <p>L'objectif était de créer un serveur IRC en duo. <br>
+					Il était demandé d'utiliser le C++ pour le réaliser. <br>
                     L'un des principes d'un serveur IRC, est de ne pas sauvegarder les conversations dans une base de données. <br>
                     Il n'y a aucune persistance dans les messages des utilisateurs. <br>
                     </p>
@@ -116,7 +117,7 @@
                     Les actions possible sur le serveur sont les mêmes qu'un serveur IRC classique. <br>
                     Le fonctionnement du serveur en plusieurs points :
                     <ul>
-                        <li><h3>Arriver d'un client:</h3>
+                        <li><h3>Connexion d'un client:</h3>
                             <ul>
                                 ~> Demande du displayname et username de l'utilisateur et le mot de passe du serveur. <br>
                                 ~> Vérification des informations et de la validité du mot de passe. <br>
@@ -137,8 +138,7 @@
                     </ul>
                 </p>
                 <p>J'ai eu l'occasion de travailler en duo pendant ce projet. L'organisation était primordiale et nous avons réparti les tâches. <br>
-                    On s'est basé sur des serveurs déjà existants pour comprendre le fonctionnement. Le sujet ne nous demandait pas de le déployer en ligne, <br>
-                    en raison du manque de temps, nous n'avions pas pu le faire.</p>
+                    On s'est basé sur des serveurs déjà existants pour comprendre leur fonctionnement.</p>
             </ul>
         </div>
         
